# migration_mongodb_medical_data

./: .gitignore  README.md  pyproject.toml
notebooks/: Analyse_1_structure.ipynb
